# prelegal

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  catalog.json  docker-compose.yml
.claude/skills/cerebras/: SKILL.md
.github/workflows/: test.yml
backend/: auth.py  conftest.py  database.py  db_models.py  documents.py  llm.py  main.py  models.py  pyproject.toml  test_auth_documents.py  test_chat_templates.py
backend/routes/: auth.py  chat.py  documents.py  templates.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.test.tsx  AuthContext.tsx  Chat.test.tsx  Chat.tsx  DocumentPreview.tsx  DocumentSelector.test.tsx  DocumentSelector.tsx  History.test.tsx  History.tsx  Login.test.tsx  Login.tsx  NdaForm.tsx  NdaPreview.tsx  SignupModal.tsx  index.css  index.tsx  ndaTemplate.test.ts  ndaTemplate.ts  types.ts
frontend/tests/: app.spec.ts
scripts/: start-windows.ps1  stop-windows.ps1
templates/: LICENSE.txt
