[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "litellm>=1.83.2",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.43.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["models", "routes", "database", "auth", "documents", "db_models", "llm"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"
